--- a/cart-service/package.json
+++ b/cart-service/package.json
@@ -9,7 +9,7 @@
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk",
-    "deploy": ""
+    "deploy": "npm run build && cdk deploy"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
